force-app/main/default/objects/RT_ImportType__c/RT_ImportType__c.object-meta.xml
<CustomObject>
    <label>Import Type</label>
    <nameField>
        <label>Import Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Import Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>