force-app/main/default/objects/RT_ImportType__c/fields/ApexClassMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexClassMethod__c</fullName>
    <defaultValue>&apos;execute&apos;</defaultValue>
    <label>Apex Class Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>