force-app/main/default/objects/RT_ImportType__c/fields/ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>ApplicationName__c</fullName>
    <label>Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>