force-app/main/default/objects/RT_ImportType__c/fields/ConsiderToday__c.field-meta.xml
<CustomField>
    <fullName>ConsiderToday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Today as Identifier?</label>
    <type>Checkbox</type>
</CustomField>