force-app/main/default/objects/RT_ImportType__c/fields/HasCustomLogic__c.field-meta.xml
<CustomField>
    <fullName>HasCustomLogic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Custom Logic?</label>
    <type>Checkbox</type>
</CustomField>