force-app/main/default/objects/RT_ImportType__c/fields/RecordTypeFilter__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeFilter__c</fullName>
    <label>Record Type Filter</label>
    <length>18</length>
    <type>Text</type>
</CustomField>