force-app/main/default/objects/RT_ImportType__c/validationRules/Apex_Method_Field_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Method_Field_Read_Only</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(ApexClassMethod__c)</errorConditionFormula>
    <errorDisplayField>ApexClassMethod__c</errorDisplayField>
    <errorMessage>This is a Read-Only Field</errorMessage>
</ValidationRule>