force-app/main/default/objects/RT_ImportType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>ApplicationName__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ApplicationName__c</field>
        <operation>equals</operation>
        <value>Revolution</value>
    </filters>
    <label>All</label>
</ListView>